<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">猜四川</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开即可刷新</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间:</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="emptyview_tv_attention">一点道德心都木有 人与人之间就该相互关注嘛!</string>
    <string name="emptyview_tv_exchange">玩游戏不就是为了兑换奖品么!</string>
    <string name="emptyview_tv_involved">不答题怎么赚积分!</string>
    <string name="emptyview_tv_question">出题也会赠送积分哦!</string>
    <string name="emptyview_tv_rank">英雄都去哪儿啦!</string>
    <string name="emptyview_user_detail">Ta没有留下任何足迹!</string>
    <string name="emptyview_tv_square">暂时没有竞猜活动!</string>
    <string name="emptyview_tv_fan">这就是木有道德心的下场啦!</string>
    <string name="activity_about_title">关于我们</string>
    <string name="activity_help_title">帮助</string>
    <string name="activity_myself_set">设置</string>
    <string name="login_defeat">服务器繁忙</string>
    <string name="invalid_accout_or_password">账号密码不匹配</string>
    <string name="no_account">账号不存在</string>
    <string name="account_locking">你的账号已被锁定</string>
    <string name="service_connect_defeat">服务器连接失败</string>
    <string name="login_forget_passwrod">找回密码</string>
    <string name="login_user_register">用户注册</string>
    <string name="login_ing">正在登录</string>
    <string name="not_login">未登录</string>
    <string name="login_password_incorrect">密码不正确</string>
    <string name="login_pphone_incorrect">手机号码不正确</string>
    <string name="network_not_available">网络连接不可用</string>
    <string name="code_reget">重新获取</string>
    <string name="code_get_defeat">获取验证码失败</string>
    <string name="code_not_right">验证码错误</string>
    <string name="code_send">验证码已发送</string>
    <string name="request_defeat">请求失败 请稍后重试</string>
    <string name="report_reason_long">亲 举报内容太长了啊!</string>
    <string name="report_success">举报成功 请耐心等待结果</string>
    <string name="report_defeat">举报失败 请稍后再试</string>
    <string name="coin">金币: </string>
    <string name="time">时间: </string>
    <string name="my_answer">答案: </string>
    <string name="myinfo_phone_not_bind">未绑定</string>
    <string name="myinfo_password_edit">修改密码</string>
    <string name="myinfo_avatar_edit">修改头像</string>
    <string name="myinfo_from_album">相册选取</string>
    <string name="myinfo_from_camera">拍照获取</string>
    <string name="myinfo_password_success">密码设置成功</string>
    <string name="myinfo_password_defeat">密码设置失败</string>
    <string name="myinfo_bind_success">手机号码绑定成功</string>
    <string name="myinfo_register_success">注册成功</string>
    <string name="myinfo_edit_password_success">密码修改成功</string>
    <string name="myinfo_password_setting">正在设置</string>
    <string name="myinfo_password_not_same">两次输入的密码不一致</string>
    <string name="myinfo_password_rule">密码为6~16位的数字或字母</string>
    <string name="phone_not_right">手机号码不正确</string>
    <string name="rule_not_right">手机号码 密码格式错误</string>
    <string name="phone_has_binded">手机号码已被绑定</string>
    <string name="phone_has_register">手机号码已被注册</string>
    <string name="account_has_bind">账号已绑定</string>
    <string name="guest_can_bind">游客账号才能绑定手机号码</string>
    <string name="info_edit_success">修改成功</string>
    <string name="info_edit_defeat">修改失败</string>
    <string name="info_name_lenght">昵称长度为1~11个字符</string>
    <string name="info_password_old">请输入旧密码</string>
    <string name="title_back">返回</string>
    <string name="title_user_check">用户验证</string>
    <string name="title_set_password">设置密码</string>
    <string name="title_phone_bind">绑定账号</string>
    <string name="title_setting">设置</string>
    <string name="title_myself">我的</string>
    <string name="title_ticking">意见反馈</string>
    <string name="title_attention_list">关注列表</string>
    <string name="title_sc_daren">四川达人</string>
    <string name="title_involved">我参与的</string>
    <string name="title_questions">你传我猜</string>
    <string name="title_change_record">兑换记录</string>
    <string name="title_rank_coin">我的金币</string>
    <string name="title_rank_level">我的积分</string>
    <string name="title_fan_list">粉丝列表</string>
    <string name="title_user_name">昵称</string>
    <string name="title_user_address">收货地址</string>
    <string name="title_user_terms">使用条款</string>
    <string name="title_user_policy">隐私政策</string>
    <string name="title_user_login">登录</string>
    <string name="title_user_passwrod">修改密码</string>
    <string name="title_report">举报</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="setting_logout">注销</string>
    <string name="setting_logout_sure">确定退出当前账号?</string>
    <string name="setting_cache_clear">清除缓存</string>
    <string name="setting_cache_clear_sure">将清除所有缓存?</string>
    <string name="setting_cache_clear_ok">缓存已清空</string>
    <string name="send_message_time"><Data>接收短信大约需要&lt;font color=#209526>%s&lt;/font>秒</Data></string>
    <string name="finish">完成</string>
    <string name="sharing"></string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="back">返回</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="main_tab_one">游戏大厅</string>
    <string name="main_tab_two">会话</string>
    <string name="main_tab_three">我的</string>
    <string name="square_activity_finish">活动已结束</string>

    <!-- 猜商城 -->
    <string name="cmark_market_price">市场价格</string>
    <string name="cmark_gold_price">金币价格</string>
    <string name="cmark_surplus_quantity">剩余数量</string>
    <string name="cmark_exchange">兑换</string>
    <string name="cmark_dialog_address">修改地址</string>
    <string name="cmark_dialog_exchange">确认兑换</string>
    <string name="cmark_dialog_cancel">取消兑换</string>
    <string name="cmark_dialog_confirm">确认收货地址</string>
    <string name="cmark_dialog_tips">您的金币不足，无法兑换此商品</string>
    <string name="cmark_dialog_title">温馨提示</string>
    <string name="cmark_exchange_ok">兑换成功</string>
    <!--  -->
    <string name="main_loading_data">数据加载</string>
    <!-- Volley -->
    <string name="no_internet">无网络连接！</string>
    <string name="generic_server_down">连接服务器失败！</string>
    <string name="generic_error">网络异常,请稍后再试！</string>
    <!-- Comment(评论) -->
    <string name="comment_title">评论</string>
    <string name="comment_tips">猜中才能看评论哦!</string>
    <string name="comment_finish_btn">完成</string>
    <string name="comment_delete">删除</string>
    <!-- 数据加载 -->
    <string name="data_loading">加载中...</string>
    <!-- 回答 -->
    <string name="answer_help">求助</string>
    <string name="answer_report">举报</string>
    <string name="answer_comment">评论</string>
    <string name="answer_chat">私信</string>
    <string name="answer_prop_help">每次使用提示需花费10金币哦！</string>
    <!-- 问题 -->
    <string name="question_title">你传我猜</string>
    <string name="question_up">提交</string>
    <string name="question_location">位置：</string>
    <string name="question_edit_hint">请输入题目文字描述</string>
    <string name="question_uptitle">上传视屏或图片</string>
    <string name="question_answer_prop">请在下面输入正确答案：</string>
    <string name="question_edit_answer_hint">答案(最多6个字，最少2个字)</string>
    <!-- 视屏录制 -->
    <string name="imageview_content_description"></string>
    <string name="record_camera_progress_message">正在转码…</string>
    <string name="record_camera_init_faild">初始化视频存储路径失败</string>
    <string name="record_video_transcoding_faild">视频转码失败</string>
    <string name="record_read_object_faild">拍摄信息读取失败！请检查SD卡，稍后重试！</string>

</resources>